# onramp-stt-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Jenkinsfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 20260611_0001_create_stt_jobs.py  20260612_0002_add_transcript_result.py  20260612_0003_add_progress_tracking.py  20260612_0004_add_correction_outputs.py  20260614_0005_add_correction_retry_count.py
app/: __init__.py  main.py
app/core/: config.py  exceptions.py  logging.py
app/correction/: __init__.py  glossary.py  llm_client.py  prompts.py  rule_based_corrector.py  service.py  types.py  validators.py
app/db/: models.py  postgres.py
app/queue/: __init__.py  constants.py  consumer.py  events.py  inbox.py  outbox.py  redis.py  semaphore.py
app/services/: clova_worker.py  correction_worker.py  job_state.py  orchestrator.py
app/storage/: base.py  factory.py  local.py  s3.py
app/stt/: __init__.py  audio_converter.py  merger.py  vad.py
app/workers/: clova.py  correction.py  orchestrator.py  outbox_publisher.py
scripts/: enqueue_audio.py
tests/: conftest.py
tests/unit/: test_audio_converter.py  test_chunk_claim.py  test_clova_provider.py  test_config.py  test_correction_retry.py  test_correction_service.py  test_health.py  test_job_state.py  test_local_storage.py  test_merger.py  test_orchestrator_event.py  test_progress_policy.py  test_queue_events.py  test_retry_policy.py  test_stream_consumer.py  test_term_ingestion.py  test_vad.py
(+8 files in other folders)
